--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="contact">
         <div id="mydiv">
           <!--Include a header DIV with the same name as the draggable DIV, followed by "header":-->
-          <div id="mydivheader">
+          <div id="mydivheader" title="Move Me">
             Contact Me
           </div>
           <ul>
@@ -151,6 +151,7 @@
 
     </div>
     <div id="hobbies" class="section">
+      <div class="line"></div>
 
       <div class="Title">
     		<h3>Hobbies</h3>
@@ -165,6 +166,7 @@
   			</ul>
   		</div>
 
+      <div class="line"></div>
     </div>
 
     <div class="projects">
