--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="Content">
-        <p>I am well organised and self motivated. I am not someone to give up easily and once I set a goal, I achieve it. I know how to plan my time wisely and effectively. I work well under pressure and always meet my deadlines.</p>
+        <p>I am well-organised and self-motivated. I am not someone to give up easily and once I set a goal, I achieve it. I know how to plan my time wisely and effectively. I work well under pressure and always meet my deadlines.</p>
       </div>
     </div>
 
@@ -134,7 +134,7 @@
     				<p>Programming, professional development, design thinking.</p>
     				<p class="subDetails">Program languages:</p>
     				<p>HTML and Bootstrap Framework, CSS (SASS and
-                SCSS), Javascript (Node.js, Express.js, Mongoose,
+                SCSS), JavaScript (Node.js, Express.js, Mongoose,
                 jQuery, React.js), Mongodb, MySQL</p>
     		</div>
 
@@ -145,7 +145,7 @@
     				<p class="subDetails">Matriculated in:</p>
     				<p>2017</p>
     				<p class="subDetails">Subjects:</p>
-    				<p>Math, English, Afrikaans, Life Orientation, Life Science, Geography, Accounting</p>
+    				<p>Mathematics, English, Afrikaans, Life Orientation, Life Sciences, Geography, Accounting</p>
     		</div>
       </div>
 
