--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
     
     <div class="onlineProfile">
         <div class="github">
-            <a href="https://github.com/Alexander-Fortuin" target="_blank" rel="noopener noreferrer"><img src="../Github_logo_PNG1.png" alt="GitHubProfile"></a>
+            <a href="https://github.com/Alexander-Fortuin" target="_blank" rel="noopener noreferrer"><img src="images/Github_logo_PNG1.png" alt="GitHubProfile"></a>
         </div>
         <div class="linkedin">
-            <a href="https://linkedin.com/in/alexander-fortuin-49861b16a" target="_blank" rel="noopener noreferrer"><img src="../Linkedin_logo_PNG4.png" alt="LinkInProfile"></a>
+            <a href="https://linkedin.com/in/alexander-fortuin-49861b16a" target="_blank" rel="noopener noreferrer"><img src="images/Linkedin_logo_PNG4.png" alt="LinkInProfile"></a>
         </div>
     </div>
   </footer>
